--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -1,3 +1,9 @@
-@import "default.styl"
-@import "responsive.styl"
-@import "tabs.styl"
+@import "base/variables.styl"
+@import "base/mixins.styl"
+@import "base/config.styl"
+@import "core/reset.styl"
+@import "core/navs.styl"
+@import "core/components.styl"
+@import "layout/layout.styl"
+@import "layout/responsive.styl"
+@import "layout/tabs.styl"
