--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,101 +1,100 @@
-<section id="content-area">
+<section id="login" class="content-area">
     <div class="container">
-        <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-            <uib-tabset active="activeJustified" justified="true">
-                <uib-tab index="0" heading="Iniciar sesión">
-                    <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
-                        <div class="form-group" ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
-                            <input type="text" ng-model="Access.formDataLogin.username" class="form-control" id="user" name="username"
-                                    placeholder="Nombre de usuario" required>
-                            <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
-                                <div ng-message="required">Ingrese el nombre de usuario</div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <uib-tabset class="tab-simple" active="activeJustified" justified="true">
+                    <uib-tab index="0" heading="Iniciar sesión">
+                        <form class="padding" name="loginForm" novalidate ng-submit="Access.login()">
+                            <div class="form-group" ng-class="{ 'has-error': loginForm.username.$touched && loginForm.username.$invalid }">
+                                <input type="text" ng-model="Access.formDataLogin.username" class="form-control" id="user" name="username"
+                                       placeholder="Nombre de usuario" required>
+                                <div class="help-block" ng-messages="loginForm.username.$error" ng-if="loginForm.username.$touched">
+                                    <div class="text-danger" ng-message="required">Ingrese el nombre de usuario</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
-                            <input type="password" ng-model="Access.formDataLogin.password" class="form-control" id="password" name="password"
-                                    placeholder="Contraseña" required>
-                            <div class="help-block" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
-                                <div ng-message="required">Ingrese la contraseña.</div>
+                            <div class="form-group" ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
+                                <input type="password" ng-model="Access.formDataLogin.password" class="form-control" id="password" name="password"
+                                       placeholder="Contraseña" required>
+                                <div class="help-block" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
+                                    <div class="text-danger" ng-message="required">Ingrese la contraseña.</div>
+                                </div>
                             </div>
-                        </div>
-                        <p class="text-center forgot-pass"><a ui-sref="recovery-password">¿Olvidaste la contraseña?</a></p>
-
-                        <div class="text-center" style="padding-top: 40px;">
-                            <button type="submit" class="btn btn-yellow1" ng-disabled="loginForm.$invalid">
+                            <p class="text-center"><a class="text-dark" ui-sref="recovery-password">¿Olvidaste la contraseña?</a></p>
+                            <div class="text-center" style="padding-top: 40px;">
+                                <button type="submit" class="btn btn-outline-danger" ng-disabled="loginForm.$invalid">
                                     Iniciar sesión <span ng-if="Contact.busy"><i
-                                    class="fa fa-spinner fa-spin"></i></span>
-                            </button>
-                        </div>
-                    </form>
-                </uib-tab>
-                <uib-tab index="1" heading="Registrarme">
-                    <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
-                        <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
-                            <input type="text" ng-model="Access.formData.contactPersonName" class="form-control" id="businessName" name="businessName"
-                                    placeholder="Nombre" required>
-                            <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
-                                <div ng-message="required">El campo nombre es requerido</div>
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
                             </div>
-                        </div>
-                        <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
-                            <input type="text" ng-minlength="5" ng-maxlength="10" ng-model="Access.formData.username" class="form-control" id="username" name="username"
-                                    placeholder="Usuario" required>
-                            <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
-                                <div ng-message="required">Este campo es requerido.</div>
-                                <div ng-message="minlength">Mínimo 6 caracteres.</div>
-                                <div ng-message="maxlength">Máximo 10 caracteres.</div>
+                        </form>
+                    </uib-tab>
+                    <uib-tab index="1" heading="Registrarme">
+                        <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.businessName.$touched && registerForm.businessName.$invalid }">
+                                <input type="text" ng-model="Access.formData.contactPersonName" class="form-control" id="businessName" name="businessName"
+                                       placeholder="Nombre" required>
+                                <div class="help-block" ng-messages="registerForm.businessName.$error" ng-if="registerForm.businessName.$touched">
+                                    <div class="text-danger" ng-message="required">El campo nombre es requerido</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
-                            <input type="email" ng-model="Access.formData.contactPersonEmail" class="form-control" id="email" name="email"
-                                    placeholder="Correo electrónico" required>
-                            <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
-                                <div ng-message="required">Este campo es requerido.</div>
-                                <div ng-message="email">Correo electrónico no válido.</div>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
+                                <input type="text" ng-minlength="5" ng-maxlength="10" ng-model="Access.formData.username" class="form-control" id="username" name="username"
+                                       placeholder="Usuario" required>
+                                <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
+                                    <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                    <div class="text-danger" ng-message="minlength">Mínimo 6 caracteres.</div>
+                                    <div class="text-danger" ng-message="maxlength">Máximo 10 caracteres.</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" ng-class="{ 'has-error': registerForm.phone.$touched && registerForm.phone.$invalid }">
-                            <input type="text" ng-model="Access.formData.contactPersonPhone" class="form-control" id="phone" name="phone"
-                                   placeholder="Whatspp" required>
-                            <div class="help-block" ng-messages="registerForm.phone.$error" ng-if="registerForm.phone.$touched">
-                                <div ng-message="required">Este campo es requerido.</div>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
+                                <input type="email" ng-model="Access.formData.contactPersonEmail" class="form-control" id="email" name="email"
+                                       placeholder="Correo electrónico" required>
+                                <div class="help-block" ng-messages="registerForm.email.$error" ng-if="registerForm.email.$touched">
+                                    <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                    <div class="text-danger" ng-message="email">Correo electrónico no válido.</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group" ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
-                                    <input type="password" ng-minlength="8" ng-model="Access.formData.password" class="form-control" name="password"
-                                            placeholder="Contraseña" required="Access.formData.password2">
-                                    <div class="help-block" ng-messages="registerForm.password.$error" ng-if="registerForm.password.$touched">
-                                        <div ng-message="required">Este campo es requerido.</div>
-                                        <div ng-message="minlength">Mínimo 8 caracteres.</div>
+                            <div class="form-group" ng-class="{ 'has-error': registerForm.phone.$touched && registerForm.phone.$invalid }">
+                                <input type="text" ng-model="Access.formData.contactPersonPhone" class="form-control" id="phone" name="phone"
+                                       placeholder="Whatspp" required>
+                                <div class="help-block" ng-messages="registerForm.phone.$error" ng-if="registerForm.phone.$touched">
+                                    <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group" ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
+                                        <input type="password" ng-minlength="8" ng-model="Access.formData.password" class="form-control" name="password"
+                                               placeholder="Contraseña" required="Access.formData.password2">
+                                        <div class="help-block" ng-messages="registerForm.password.$error" ng-if="registerForm.password.$touched">
+                                            <div class="text-danger" ng-message="required">Este campo es requerido.</div>
+                                            <div class="text-danger" ng-message="minlength">Mínimo 8 caracteres.</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group" ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
+                                        <input type="password" ng-model="Access.formData.password2" class="form-control" id="password2" name="password2"
+                                               placeholder="Confirmar contraseña"
+                                               compare-to="Access.formData.password" ng-required="Access.formData.password">
+                                        <div class="help-block" ng-messages="registerForm.password2.$error" ng-if="registerForm.password2.$touched">
+                                            <div class="text-danger" ng-message="required">Confirmar contraseña.</div>
+                                            <div class="text-danger" ng-message="compareTo">Las contraseñas no coinciden.</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group" ng-class="{ 'has-error': registerForm.password2.$touched && registerForm.password2.$invalid }">
-                                    <input type="password" ng-model="Access.formData.password2" class="form-control" id="password2" name="password2"
-                                            placeholder="Confirmar contraseña"
-                                            compare-to="Access.formData.password" ng-required="Access.formData.password">
-                                    <div class="help-block" ng-messages="registerForm.password2.$error" ng-if="registerForm.password2.$touched">
-                                        <div ng-message="required">Confirmar contraseña.</div>
-                                        <div ng-message="compareTo">Las contraseñas no coinciden.</div>
-                                    </div>
-                                </div>
+                            <div class="text-center" style="padding-top: 15px;">
+                                <button type="submit" class="btn btn-outline-danger"
+                                        ng-disabled="registerForm.$invalid">
+                                    Regístrarme <span ng-if="Access.busy"><i
+                                        class="fa fa-spinner fa-spin"></i></span>
+                                </button>
                             </div>
-                        </div>
-
-
-                        <div class="text-center" style="padding-top: 15px;">
-                            <button type="submit" class="btn btn-yellow1"
-                                    ng-disabled="registerForm.$invalid">
-                                Regístrarme <span ng-if="Access.busy"><i
-                                    class="fa fa-spinner fa-spin"></i></span>
-                            </button>
-                        </div>
-                    </form>
-                </uib-tab>
-            </uib-tabset>
+                        </form>
+                    </uib-tab>
+                </uib-tabset>
+            </div>
         </div>
     </div>
 </section>
