--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,14 +1,17 @@
- <div id="breadcrumb">
+<section id="breadcrumb">
     <div class="container">
-        <ol class="breadcrumb">
-            <li><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a></li>
-            <li ng-if="Post.detail.categories.length"><a
-                    ui-sref="category({slug: Post.detail.categories[0].slug })">{{ Post.detail.categories[0].name }}</a>
-            </li>
-            <li class="active">{{ Post.detail.title }}</li>
-        </ol>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a ui-sref="home"><i class="fa fa-angle-left"></i> Regresar a inicio</a
+                </li>
+                <li class="breadcrumb-item" ng-if="Post.detail.categories.length"><a
+                        ui-sref="category({slug: Post.detail.categories[0].slug })">{{ Post.detail.categories[0].name }}</a>
+                </li>
+                <li class="breadcrumb-item active">{{ Post.detail.title }}</li>
+            </ol>
+        </nav>
     </div>
-</div>
+</section>
 <section id="content-area" class="content-blog">
      <div class="container">
         <div class="row">
